--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 :root {
     --color-gray: #d8d9db;
     --color-orange: #df974c;
+    --color-black: #0a0a0a;
+    --color-white: #ffffff;
 
     --gradient-gray: rgba(216, 217, 219, 0.5);
     --gradient-orange: rgba(223, 151, 76, 0.7)
@@ -34,9 +36,9 @@ body {
 
 .display {
     grid-area: display;
-    background-color: black;
-    color: white;
-    border: 1px solid black;
+    background-color: var(--color-black);
+    color: var(--color-white);
+    border: 1px solid var(--color-black);
     font-size: 45px;
     display: flex;
     flex-wrap: wrap;
@@ -47,7 +49,7 @@ body {
 .R1C1 {
     grid-area: R1C1;
     background-color: var(--color-gray);
-    border: 1px solid black;
+    border: 1px solid var(--color-black);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -66,7 +68,7 @@ body {
 .R4C2,
 .R4C3 {
     background-color: var(--color-gray);
-    border: 1px solid black;
+    border: 1px solid var(--color-black);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -77,7 +79,7 @@ body {
 .R5C1 {
     grid-area: R5C1;
     background-color: var(--color-gray);
-    border: 1px solid black;
+    border: 1px solid var(--color-black);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -91,12 +93,12 @@ body {
 .R4C4,
 .R5C2 {
     background-color: var(--color-orange);
-    border: 1px solid black;
+    border: 1px solid var(--color-black);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    color: white;
+    color: var(--color-white);
     font-size: 35px;
 
     &:hover {
